[package]
name = "hello_module"
version = "0.1.0"
edition = "2024"

[lib]
name = "magic_mount"
crate-type = ["cdylib"]

[dependencies]
mlua = { version = "0.11.5", features = ["lua54", "vendored"] }
mlua-sys = { version = "0.9.0", features = ["lua54", "vendored"] }
libc = "0.2"
log = "0.4"
anyhow = "1.0"
rustix = { git = "https://github.com/AndroidPatch/rustix", branch = "main", features = ["all-apis"] }

android_logger = { version = "0.15", default-features = false }
jwalk = "0.8"
const_format = "0.2"
extattr = "1.0"
